--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -622,7 +622,7 @@
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
   "wallet.byron.notification.moveFundsTitle": "Move funds from \"{activeWalletName}\"",
   "wallet.connect.dialog.button.cancel": "Cancel",
-  "wallet.connect.dialog.instructions": "<p><b>Daedalus currently supports only Trezor Model T hardware wallet devices.</b></p><p>If you are <b>pairing your device with Daedalus for the first time</b>, please follow the instructions below.</p><p>If you have <b>already paired your device with Daedalus</b>, you don’t need to repeat this step. Just connect your device when you need to confirm a transaction.</p>",
+  "wallet.connect.dialog.instructions": "<p>Daedalus currently supports Ledger Nano S, Ledger Nano X, and Trezor Model T hardware wallet devices.</p>",
   "wallet.connect.dialog.title": "Pair a hardware wallet device",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create Shelley wallet",
@@ -642,8 +642,9 @@
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.dialog.passwordTooltip": "<b>We recommend using a password manager app</b> to manage and store your spending password. Generate a unique password using a password manager and paste it here. Passwords should never be reused.",
   "wallet.hardware.deviceStatus.connecting": "Connect your hardware wallet device",
+  "wallet.hardware.deviceStatus.connecting.failed": "Unable to detect your hardware wallet device.",
   "wallet.hardware.deviceStatus.connecting.known": "Connect the \"{walletName}\" device",
-  "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your device to restart the process",
+  "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your hardware wallet to restart the process.",
   "wallet.hardware.deviceStatus.exporting_public_key": "Export the public key on your device",
   "wallet.hardware.deviceStatus.exporting_public_key_failed": "Exporting the public key failed",
   "wallet.hardware.deviceStatus.launching_cardano_app": "Launch Cardano application on your device",
@@ -655,6 +656,9 @@
   "wallet.hardware.deviceStatus.verifying_transaction": "Confirm the transaction using the \"{walletName}\" device",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "Transaction confirmation failed",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "Transaction confirmed",
+  "wallet.hardware.deviceStatus.wrong_cardano_app_version": "Outdated Ledger software! {instructionsLink}",
+  "wallet.hardware.deviceStatus.wrong_cardano_app_version.link.label": "Software update instructions",
+  "wallet.hardware.deviceStatus.wrong_cardano_app_version.link.url": "https://support.ledger.com/hc/en-us/articles/360020095874-Cardano-ADA-",
   "wallet.hardware.deviceStatus.wrong_firmware": "Unsupported firmware! {instructionsLink}",
   "wallet.hardware.deviceStatus.wrong_firmware.link.label": "Firmware update instructions",
   "wallet.hardware.deviceStatus.wrong_firmware.link.url": "https://trezor.io/start/",
