--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -622,7 +622,7 @@
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
   "wallet.connect.dialog.button.cancel": "キャンセル",
-  "wallet.connect.dialog.instructions": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b></p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
+  "wallet.connect.dialog.instructions": "<p>Daedalusは現在Ledger Nano S、Ledger Nano X、Trezor Model Tハードウェアウォレットデバイスをサポートしています。<p>",
   "wallet.connect.dialog.title": "ハードウェアウォレットを接続する",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
@@ -642,8 +642,9 @@
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
   "wallet.dialog.passwordTooltip": "送信時パスワードの管理および保存には、<b>パスワード管理アプリの使用が推奨されます。</b>パスワード管理アプリで専用パスワードを生成し、ここに張り付けてください。パスワードは絶対に再利用しないでください。",
   "wallet.hardware.deviceStatus.connecting": "ハードウェアウォレットデバイスを接続してください",
+  "wallet.hardware.deviceStatus.connecting.failed": "ハードウェアウォレットデバイスを検出できません。",
   "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してください",
-  "wallet.hardware.deviceStatus.exportingPublicKeyError": "デバイスを切断して再接続し、もう一度プロセスを始めてください",
+  "wallet.hardware.deviceStatus.exportingPublicKeyError": "ハードウェアウォレットを切断して再接続し、もう一度プロセスを始めてください。",
   "wallet.hardware.deviceStatus.exporting_public_key": "デバイス上で公開鍵をエクスポートしてください",
   "wallet.hardware.deviceStatus.exporting_public_key_failed": "公開鍵のエクスポートができません",
   "wallet.hardware.deviceStatus.launching_cardano_app": "デバイス上でCardanoアプリケーションを起動してください",
@@ -655,6 +656,9 @@
   "wallet.hardware.deviceStatus.verifying_transaction": "「{walletName}」デバイスを使ってトランザクションを確認してください",
   "wallet.hardware.deviceStatus.verifying_transaction_failed": "デバイスの確認ができません",
   "wallet.hardware.deviceStatus.verifying_transaction_succeeded": "トランザクションが確認されました",
+  "wallet.hardware.deviceStatus.wrong_cardano_app_version": "Ledgerソフトウェアは期限切れです。{instructionsLink}",
+  "wallet.hardware.deviceStatus.wrong_cardano_app_version.link.label": "ソフトウェア更新ガイド",
+  "wallet.hardware.deviceStatus.wrong_cardano_app_version.link.url": "https://support.ledger.com/hc/en-us/articles/360020095874-Cardano-ADA-",
   "wallet.hardware.deviceStatus.wrong_firmware": "サポートされていないファームウェアです。{instructionsLink}",
   "wallet.hardware.deviceStatus.wrong_firmware.link.label": "ファームウェア更新ガイド",
   "wallet.hardware.deviceStatus.wrong_firmware.link.url": "https://trezor.io/start/",
