--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -670,7 +670,7 @@
   "wallet.notResponding.title": "ウォレットは応答していません",
   "wallet.receive.dialog.copyAddressLabel": "アドレスをコピーする",
   "wallet.receive.dialog.dialogTitle": "ウォレットアドレスを共有する",
-  "wallet.receive.dialog.downloadPDFButton": "PDFをダウンロードする",
+  "wallet.receive.dialog.downloadPDFButton": "PDF形式で保存する",
   "wallet.receive.dialog.inputLabel": "PDF用メモ",
   "wallet.receive.dialog.inputPlaceholder": "PDF文書上に表示するメモを追加できます",
   "wallet.receive.dialog.saveQRCodeImage": "QRコードの画像を保存する",
