[DDW-197] Disable Ledger on Linux, Improve text copy, Improve logging

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -124,7 +124,6 @@
   "global.duration.months": "months",
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
@@ -142,7 +141,6 @@
   "global.labels.close": "Close",
   "global.labels.create": "Create",
   "global.labels.filter": "Filter",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "Remove",
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
@@ -185,7 +183,6 @@
   "loading.screen.updatedCardanoMessage": "Cardano node updated",
   "loading.screen.updatingCardanoMessage": "Updating Cardano node",
   "loading.screen.verifyingBlockchainMessage": "Verifying the blockchain ({verificationProgress}% complete) ",
-  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "Newsfeed is empty",
   "news.newsfeed.noFetch": "Trying to fetch the newsfeed...",
   "news.newsfeed.title": "Newsfeed",
@@ -514,7 +511,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "I understand",
   "static.splash.network.flightDescription1": "Thank you for downloading the Daedalus Flight wallet! This version of Daedalus is specially created so users can test new features and we can squash usability bugs before pushing releases to the mainnet production version of the Daedalus wallet. ",
   "static.splash.network.flightDescription2": "Although Flight candidates are designed to test functionality, this is on the mainnet and will <b>be using mainnet ada. Transactions made using Flight candidates will be real ada payments.</b> If you are not a power user, we recommend you stick to using our stable, fully-tested production Daedalus wallet client. It is very important to note that transactions performed in Daedalus Flight are real and your funds will be transferred because the Cardano blockchain will be validating all transactions on mainnet.",
@@ -624,7 +620,8 @@
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
   "wallet.byron.notification.moveFundsTitle": "Move funds from \"{activeWalletName}\"",
   "wallet.connect.dialog.button.cancel": "Cancel",
-  "wallet.connect.dialog.instructions": "<p>Daedalus currently supports Ledger Nano S, Ledger Nano X, and Trezor Model T hardware wallet devices.</p>",
+  "wallet.connect.dialog.instructions": "<p>Daedalus currently supports Ledger Nano S, Ledger Nano X, and Trezor Model T hardware wallet devices.</p><p>If you are <b>pairing your device with Daedalus for the first time</b>, please follow the instructions below.</p><p>If you have <b>already paired your device with Daedalus</b>, you don’t need to repeat this step. Just connect your device when you need to confirm a transaction.</p>",
+  "wallet.connect.dialog.instructionsTrezorOnly": "<p><b>Daedalus currently supports only Trezor Model T hardware wallet devices.</b></p><p>If you are <b>pairing your device with Daedalus for the first time</b>, please follow the instructions below.</p><p>If you have <b>already paired your device with Daedalus</b>, you don’t need to repeat this step. Just connect your device when you need to confirm a transaction.</p>",
   "wallet.connect.dialog.title": "Pair a hardware wallet device",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create Shelley wallet",
@@ -643,7 +640,7 @@
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.dialog.passwordTooltip": "<b>We recommend using a password manager app</b> to manage and store your spending password. Generate a unique password using a password manager and paste it here. Passwords should never be reused.",
-  "wallet.hardware.deviceStatus.connecting": "Connect your hardware wallet device",
+  "wallet.hardware.deviceStatus.connecting": "Connect your device and enter your PIN to unlock it",
   "wallet.hardware.deviceStatus.connecting.failed": "Unable to detect your hardware wallet device.",
   "wallet.hardware.deviceStatus.connecting.known": "Connect the \"{walletName}\" device",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "Disconnect and reconnect your hardware wallet to restart the process.",
