--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -124,7 +124,6 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
@@ -142,7 +141,6 @@
   "global.labels.close": "閉じる",
   "global.labels.create": "作成",
   "global.labels.filter": "フィルター",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
   "global.labels.save": "保存する",
@@ -185,7 +183,6 @@
   "loading.screen.updatedCardanoMessage": "Cardanoノードが更新されました",
   "loading.screen.updatingCardanoMessage": "Cardanoノードを更新しています",
   "loading.screen.verifyingBlockchainMessage": "ブロックチェーンを検証しています（{verificationProgress}%完了）",
-  "manualUpdate.button.label": "!!!Follow instructions and manually update",
   "news.newsfeed.empty": "ニュースフィードは空です",
   "news.newsfeed.noFetch": "ニュースフィードを読み込んでいます…",
   "news.newsfeed.title": "ニュースフィード",
@@ -514,7 +511,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "了解しました",
   "static.splash.network.flightDescription1": "Daedalus Flightウォレットをダウンロードいただきありがとうございます。このDaedalusバージョンは、Daedalusウォレットの製品バージョンをメインネットへリリースする前に、ユーザーが新機能をテストし、開発チームが使用性に関するバグに対処するために特別に作成したバージョンです。",
   "static.splash.network.flightDescription2": "Flight候補版は機能性をテストするためにデザインされていますが、これはメインネットに接続されており、<b>メインネットのADAを使用します。Flight候補版を使用して実行されるトランザクションでは実際のADAによる支払いが生じます。</b>パワーユーザー以外は、完全にテスト済みの安定した製品版Daedalusウォレットの使用を継続することを推奨します。Daedalus Flightウォレットで実行されるトランザクションは実際のものであり、すべてのトランザクションはCardanoブロックチェーンにメインネット上で検証されるため、ユーザーの資金は実際に送金されるということを十分に理解してください。",
@@ -624,7 +620,8 @@
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
   "wallet.connect.dialog.button.cancel": "キャンセル",
-  "wallet.connect.dialog.instructions": "<p>Daedalusは現在Ledger Nano S、Ledger Nano X、Trezor Model Tハードウェアウォレットデバイスをサポートしています。<p>",
+  "wallet.connect.dialog.instructions": "<p>Daedalusは現在Ledger Nano S、Ledger Nano X、Trezor Model Tハードウェアウォレットデバイスをサポートしています。<p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
+  "wallet.connect.dialog.instructionsTrezorOnly": "<p><b>Daedalusが現在サポートするハードウェアウォレットデバイスはTrezor Model Tのみです。</b></p><p><b>デバイスを初めてDaedalusにペアリングする場合</b>は、以下の指示に従ってください。</p><p><b>Daedalusとペアリング済みであるデバイスの場合</b>には、この手順を繰り返す必要はありません。トランザクションを確認する必要があるときに、デバイスを接続してください。<p>",
   "wallet.connect.dialog.title": "ハードウェアウォレットを接続する",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Shelleyウォレットを作成する",
@@ -643,7 +640,7 @@
   "wallet.create.dialog.validateStep": "!!!Validate",
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
   "wallet.dialog.passwordTooltip": "送信時パスワードの管理および保存には、<b>パスワード管理アプリの使用が推奨されます。</b>パスワード管理アプリで専用パスワードを生成し、ここに張り付けてください。パスワードは絶対に再利用しないでください。",
-  "wallet.hardware.deviceStatus.connecting": "ハードウェアウォレットデバイスを接続してください",
+  "wallet.hardware.deviceStatus.connecting": "デバイスを接続してPINを入力し、ロックを解除してください",
   "wallet.hardware.deviceStatus.connecting.failed": "ハードウェアウォレットデバイスを検出できません。",
   "wallet.hardware.deviceStatus.connecting.known": "「{walletName}」デバイスを接続してください",
   "wallet.hardware.deviceStatus.exportingPublicKeyError": "ハードウェアウォレットを切断して再接続し、もう一度プロセスを始めてください。",
