--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -547,45 +547,46 @@
   "test.environment.shelleyTestnetLabel": "Shelley Testnet",
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
-  "voting.info.buttonLabel": "I've completed all the steps. Continue with registration.",
-  "voting.info.description": "Before you start you must first complete the steps below:",
+  "voting.info.buttonLabel": "I confirm all steps have been completed. Continue with registration.",
+  "voting.info.description": "Before you begin, you must first complete the steps below:",
   "voting.info.heading": "Register to vote",
   "voting.info.stepTitle1": "Download the Catalyst Voting App",
   "voting.info.stepTitle2": "Open the Catalyst Voting App and click on the complete registration button.",
-  "voting.info.stepTitle3": "Make sure you have 5 minutes for going through the process, and additional one hour wait time to receive a final confirmation.",
+  "voting.info.stepTitle3": "Ensure you have 5 minutes to complete the registration process, and an additional hour to receive a final confirmation.",
   "voting.votingAdd.chooseWallet.step.continueButtonLabel": "Continue",
-  "voting.votingAdd.chooseWallet.step.description": "For <span>fund 2</span> voting you will be able to use only one wallet to register.",
+  "voting.votingAdd.chooseWallet.step.description": "For <span>fund2</span> voting you will only be able to use one wallet to register.",
   "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "This wallet does not contain the minimum amount of {minVotingFunds} ADA which is required for voting to be available. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click continue.",
   "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "This wallet contains only rewards balances so it cannot be voting.",
   "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "This wallet can’t be used for voting while it’s being synced.",
   "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "Select wallet",
   "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "Select Wallet",
-  "voting.votingAdd.confirm.step.continueButtonLabel": "Confirm registration Transaction",
-  "voting.votingAdd.confirm.step.description": "To ensure your registration is confirmed, you are required to wait 1 hour before proceeding.",
-  "voting.votingAdd.confirm.step.descriptionRestart": "Please restart the registration process by clicking on the restart registration button..",
+  "voting.votingAdd.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining} seconds left before confirmation]",
+  "voting.votingAdd.confirm.step.continueButtonLabel": "Confirm Registration Transaction",
+  "voting.votingAdd.confirm.step.description": "To ensure your registration is confirmed, you will need to wait 1 hour before proceeding.",
+  "voting.votingAdd.confirm.step.descriptionRestart": "Please restart the registration process by clicking the Restart Registration button.",
   "voting.votingAdd.confirm.step.errorMessage": "Registration transaction was not registered correctly.",
-  "voting.votingAdd.confirm.step.importantInformation1": "If you close this window or the wallet, you will need to start registration again and resubmit your registration transaction.",
-  "voting.votingAdd.confirm.step.importantInformation2": "While the 1 hour wait time would suffice for 99.99% of cases, to insure 100% your registration is successful please wait a total of 18 hours before proceeding.",
+  "voting.votingAdd.confirm.step.importantInformation1": "If you close this window, or the wallet, you will need to start the registration process again and resubmit your registration transaction.",
+  "voting.votingAdd.confirm.step.importantInformation2": "In 99.99% of cases the 1 hour wait time should suffice, however if you want a 100% guarantee to ensure successful registration we recommend waiting for 18 hours before confirming.",
   "voting.votingAdd.confirm.step.restartButtonLabel": "Restart Registration",
   "voting.votingAdd.dialog.dialogTitle": "Register to vote",
   "voting.votingAdd.dialog.subtitle": "Step {step} of {stepCount}",
   "voting.votingAdd.enterPinCode.step.continueButtonLabel": "Create PIN code",
-  "voting.votingAdd.enterPinCode.step.description": "Please create a voting PIN code. This code will be used to access the Catalyst Voting App and decrypt your QR code.",
+  "voting.votingAdd.enterPinCode.step.description": "Please create a voting PIN code. This code will be used to access the Catalyst Voting app and decrypt your QR code.",
   "voting.votingAdd.enterPinCode.step.enterPinCodeLabel": "Enter PIN code",
   "voting.votingAdd.enterPinCode.step.errors.invalidPinCode": "Invalid pin code",
   "voting.votingAdd.enterPinCode.step.errors.invalidRepeatPinCode": "Pin doesn't match",
-  "voting.votingAdd.enterPinCode.step.reminder": "<span>Don't forget your Pin Code.</span> If you lose it, you will not be able to proceed with the registration process and you will not be able to access the mobile app.",
+  "voting.votingAdd.enterPinCode.step.reminder": "<span>You need to remember your PIN Code.</span> If you lose it, you will not be able to proceed with the registration process.",
   "voting.votingAdd.enterPinCode.step.repeatPinCodeLabel": "Repeat PIN code",
   "voting.votingAdd.enterPinCode.step.subtitle": "Your registration transaction was confirmed.",
   "voting.votingAdd.enterPinCode.step.title": "Congratulations!",
-  "voting.votingAdd.qrCode.step.message": "I understand that this QR is not saved anywhere, and I will not have access to it after closing this screen.",
+  "voting.votingAdd.qrCode.step.message": "This QR code is not saved anywhere, and you will not have access to it after closing this screen.",
   "voting.votingAdd.qrCode.step.qrCodeDescription": "Scan the QR code using the Catalyst Voting app.",
   "voting.votingAdd.qrCode.step.qrCodeTitle": "Please complete your registration now",
   "voting.votingAdd.qrCode.step.takeScreenShotMessage": "Take a screenshot of the QR code if you want to access it later.",
-  "voting.votingAdd.qrCode.step.warningMessage": "If you lose access to the QR code, you will need to register again in order to generate a new QR code.",
+  "voting.votingAdd.qrCode.step.warningMessage": "If you lose access to the QR code, you will need to register again to generate a new QR code.",
   "voting.votingAdd.sign.step.calculatingFees": "Calculating fees",
   "voting.votingAdd.sign.step.continueButtonLabel": "Submit Registration Transaction",
-  "voting.votingAdd.sign.step.description": "By submitting this registration transaction. You will be creating a proof of your staking balance. The proof will be used to calculate your voting power. Except fees, there will no change in your wallet's balance.",
+  "voting.votingAdd.sign.step.description": "By submitting this registration transaction, you are creating a proof of your staking balance. This proof will be used to calculate your voting power. With the exception of fees, there will be no change to the balance of your wallet.",
   "voting.votingAdd.sign.step.feesLabel": "Fees",
   "voting.votingAdd.sign.step.spendingPasswordLabel": "Spending password",
   "voting.votingAdd.sign.step.spendingPasswordPlaceholder": "Spending password",
