--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -547,53 +547,54 @@
   "test.environment.shelleyTestnetLabel": "Shelleyテストネット",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
-  "voting.info.buttonLabel": "!!!I've completed all the steps. Continue with registration.",
-  "voting.info.description": "!!Before you start you must first complete the steps below:",
-  "voting.info.heading": "!!!Register to vote",
-  "voting.info.stepTitle1": "!!!Download the Catalyst Voting App",
-  "voting.info.stepTitle2": "!!!Open the Catalyst Voting App and click on the complete registration button.",
-  "voting.info.stepTitle3": "!!!Make sure you have 5 minutes to complete the process",
-  "voting.votingAdd.chooseWallet.step.continueButtonLabel": "!!!Continue",
-  "voting.votingAdd.chooseWallet.step.description": "!!!For  <span>fund 2</span> voting you will be able to use only one wallet to register.",
+  "voting.info.buttonLabel": "投票の登録をする",
+  "voting.info.description": "始める前に、必ず以下のステップを完了してください",
+  "voting.info.heading": "投票の登録をする",
+  "voting.info.stepTitle1": "Catalyst Votingアプリをダウンロードします",
+  "voting.info.stepTitle2": "Catalyst Votingアプリを開き[登録を完了する]ボタンをクリックします",
+  "voting.info.stepTitle3": "登録プロセスにかかる5分、さらに最終確認を受信するまでにかかる1時間の所要時間を確保してください",
+  "voting.votingAdd.chooseWallet.step.continueButtonLabel": "続ける",
+  "voting.votingAdd.chooseWallet.step.description": "<span>fund2</span>の投票用として、登録に使用できるウォレットは1つだけです。",
   "voting.votingAdd.chooseWallet.step.errorMinVotingFunds": "!!!This wallet does not contain the minimum amount of {minVotingFunds} ADA which is required for voting to be available. Please select a wallet with <span>a minimum amount of {minVotingFunds} ADA</span> and click continue.",
   "voting.votingAdd.chooseWallet.step.errorMinVotingFundsRewardsOnly": "!!!This wallet contains only rewards balances so it cannot be voting.",
   "voting.votingAdd.chooseWallet.step.errorRestoringWallet": "!!!This wallet can’t be used for voting while it’s being synced.",
-  "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "!!!Select wallet",
-  "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "!!!Select Wallet",
-  "voting.votingAdd.confirm.step.continueButtonLabel": "!!!Confirm registration Transaction",
-  "voting.votingAdd.confirm.step.description": "!!!To ensure your registration is confirmed, you are required to wait 1 hour before proceeding.",
-  "voting.votingAdd.confirm.step.descriptionRestart": "!!!Please restart the registration process by clicking on the restart registration button..",
-  "voting.votingAdd.confirm.step.errorMessage": "!!!Registration transaction was not registered correctly.",
-  "voting.votingAdd.confirm.step.importantInformation1": "!!!If you close this window or the wallet, you will need to start registration again and resubmit your registration transaction.",
-  "voting.votingAdd.confirm.step.importantInformation2": "!!!While the 1 hour wait time would suffice for 99.99% of cases, to insure 100% your registration is successful please wait a total of 18 hours before proceeding.",
-  "voting.votingAdd.confirm.step.restartButtonLabel": "!!!Restart Registration",
-  "voting.votingAdd.dialog.dialogTitle": "!!!Register to vote",
-  "voting.votingAdd.dialog.subtitle": "!!!Step {step} of {stepCount}",
-  "voting.votingAdd.enterPinCode.step.continueButtonLabel": "!!!Create PIN code",
-  "voting.votingAdd.enterPinCode.step.description": "!!!Please create a voting PIN code. This code will be used to access the Catalyst Voting App and decrypt your QR code.",
-  "voting.votingAdd.enterPinCode.step.enterPinCodeLabel": "!!!Enter PIN code",
+  "voting.votingAdd.chooseWallet.step.selectWalletInputLabel": "ウォレットを選択する",
+  "voting.votingAdd.chooseWallet.step.selectWalletInputPlaceholder": "ウォレットを選択する",
+  "voting.votingAdd.confirm.step.continueButtonCountDownLabel": "[{countdownRemaining}確認まであとx秒]",
+  "voting.votingAdd.confirm.step.continueButtonLabel": "登録トランザクションを確認する",
+  "voting.votingAdd.confirm.step.description": "登録が確認されるまで次の段階に進む前に1時間お待ちください。",
+  "voting.votingAdd.confirm.step.descriptionRestart": "[登録をやり直す]ボタンをクリックして、登録プロセスをやり直してください。",
+  "voting.votingAdd.confirm.step.errorMessage": "登録トランザクションは正しく登録されませんでした。",
+  "voting.votingAdd.confirm.step.importantInformation1": "この画面、またはウォレットを閉じると、登録プロセスをやり直し、登録トランザクションを再度送信する必要が生じます。",
+  "voting.votingAdd.confirm.step.importantInformation2": "99.99%の場合待機時間は1時間で十分ですが、登録が成功したことを100%確実にしたい場合は、18時間待ってから確認ボタンを押してください。",
+  "voting.votingAdd.confirm.step.restartButtonLabel": "登録をやり直す",
+  "voting.votingAdd.dialog.dialogTitle": "投票の登録をする",
+  "voting.votingAdd.dialog.subtitle": "ステップ{step}/{stepCount}",
+  "voting.votingAdd.enterPinCode.step.continueButtonLabel": "PINコードを作成する",
+  "voting.votingAdd.enterPinCode.step.description": "投票用のPINコードを作成してください。このコードはCatalyst VotingアプリへのアクセスとQRコードの解読に使用されます。",
+  "voting.votingAdd.enterPinCode.step.enterPinCodeLabel": "PINコードを入力してください",
   "voting.votingAdd.enterPinCode.step.errors.invalidPinCode": "!!!Invalid pin code",
-  "voting.votingAdd.enterPinCode.step.errors.invalidRepeatPinCode": "!!!Pin doesn't match",
-  "voting.votingAdd.enterPinCode.step.reminder": "!!!<span>Don't forget your Pin Code.</span> If you lose it, you will not be able to proceed with the registration process and you will not be able to access the mobile app.",
-  "voting.votingAdd.enterPinCode.step.repeatPinCodeLabel": "!!!Repeat PIN code",
-  "voting.votingAdd.enterPinCode.step.subtitle": "!!!Your registration transaction was confirmed.",
-  "voting.votingAdd.enterPinCode.step.title": "!!!Congratulations!",
-  "voting.votingAdd.qrCode.step.message": "!!!I understand that this QR is not saved anywhere, and I will not have access to it after closing this screen.",
-  "voting.votingAdd.qrCode.step.qrCodeDescription": "!!!Scan the QR code using the Catalyst Voting app.",
-  "voting.votingAdd.qrCode.step.qrCodeTitle": "!!!Please complete your registration now.",
-  "voting.votingAdd.qrCode.step.takeScreenShotMessage": "!!!Take a screenshot of the QR code if you want to access it later.",
-  "voting.votingAdd.qrCode.step.warningMessage": "!!!If you lose access to the QR code, you will need to register again in order to generate a new QR code.",
-  "voting.votingAdd.sign.step.calculatingFees": "!!!Calculating fees",
-  "voting.votingAdd.sign.step.continueButtonLabel": "!!!Submit Registration Transaction",
-  "voting.votingAdd.sign.step.description": "!!!By submitting this registration transaction. You will be creating a proof of your staking balance. The proof will be used to calculate your voting power. Except fees, there will no change in your wallet's balance.",
-  "voting.votingAdd.sign.step.feesLabel": "!!!Fees",
-  "voting.votingAdd.sign.step.spendingPasswordLabel": "!!!Spending password",
-  "voting.votingAdd.sign.step.spendingPasswordPlaceholder": "!!!Spending password",
-  "voting.votingAdd.steps.step.1.label": "Wallet",
-  "voting.votingAdd.steps.step.2.label": "PIN code",
-  "voting.votingAdd.steps.step.3.label": "Deposit",
-  "voting.votingAdd.steps.step.4.label": "QR code",
-  "voting.votingAdd.steps.step.5.label": "QR code",
+  "voting.votingAdd.enterPinCode.step.errors.invalidRepeatPinCode": "PINコードが一致しません",
+  "voting.votingAdd.enterPinCode.step.reminder": "PINコードはなくさないように注意してください。PINコードをなくすと、登録プロセスを続けることができなくなります",
+  "voting.votingAdd.enterPinCode.step.repeatPinCodeLabel": "PINコードを再入力してください",
+  "voting.votingAdd.enterPinCode.step.subtitle": "登録トランザクションが確認されました",
+  "voting.votingAdd.enterPinCode.step.title": "おめでとうございます",
+  "voting.votingAdd.qrCode.step.message": "このQRコードはどこにも保存されることなく、この画面を閉じるとアクセスできなくなります。",
+  "voting.votingAdd.qrCode.step.qrCodeDescription": "Catalyst VotingアプリでQRコードをスキャンしてください",
+  "voting.votingAdd.qrCode.step.qrCodeTitle": "登録を完了してください",
+  "voting.votingAdd.qrCode.step.takeScreenShotMessage": "あとからアクセスする可能性がある場合は、QRコードのスクリーンショットを撮っておいてください",
+  "voting.votingAdd.qrCode.step.warningMessage": "QRコードへのアクセスをなくした場合、新しいQRコードを生成するためには、登録を再び行う必要があります。",
+  "voting.votingAdd.sign.step.calculatingFees": "手数料を計算しています",
+  "voting.votingAdd.sign.step.continueButtonLabel": "登録トランザクションを送信する",
+  "voting.votingAdd.sign.step.description": "この登録トランザクションを送信することによって、ステーキング残高の証明が作成されます。この証明に基づき、あなたの議決権が計算されます。手数料を除いて、ウォレットの残高が変更されることはありません。",
+  "voting.votingAdd.sign.step.feesLabel": "手数料",
+  "voting.votingAdd.sign.step.spendingPasswordLabel": "送信時パスワード",
+  "voting.votingAdd.sign.step.spendingPasswordPlaceholder": "送信時パスワード",
+  "voting.votingAdd.steps.step.1.label": "ウォレット",
+  "voting.votingAdd.steps.step.2.label": "署名",
+  "voting.votingAdd.steps.step.3.label": "確認",
+  "voting.votingAdd.steps.step.4.label": "PINコード",
+  "voting.votingAdd.steps.step.5.label": "QRコード",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
   "wallet.add.dialog.create.description.itn": "Shelleyウォレットを新規作成する",
   "wallet.add.dialog.create.label": "作成",
